opa/disallow-defaultsvctoken/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPVerifyServiceAccountToken
metadata:
  name: k9s-pspverify-svc-token
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod","Deployment"]
    excludedNamespaces: ["kube-system"]
